Issue #15027: Rewrite the UTF-32 encoder.  It is now 1.6x to 3.5x faster.